--- a/psc/templates/psc/dco_incident_list.html
+++ b/psc/templates/psc/dco_incident_list.html
@@ -70,7 +70,7 @@
                         <th>H</th>
                         <th>J</th>
                         <th>K</th>
-                        <th class="checklist" colspan="2"><button onclick="location.href='{% url psc.views.dco_incident_add  %}'">Add Incident</button></th>
+                        {% if perms.psc.can_manage %}<th class="checklist" colspan="2"><button onclick="location.href='{% url psc.views.dco_incident_add  %}'">Add Incident</button></th>{% endif %}
                     </tr>
                 </thead>
 				{% for cl in checklists.object_list %}
@@ -131,7 +131,7 @@
                         <img src="/assets/img/status-busy.png" width="16" height="16" alt="complete" />
 						{% endif %}
                     </td>
-                    <td class="checklist"><a href="{% url psc.views.dco_incident_update cl.id %}">Edit</a></td>
+                    {% if perms.psc.can_manage %}<td class="checklist"><a href="{% url psc.views.dco_incident_update cl.id %}">Edit</a></td>{% endif %}
 										<td><a href="{% url psc.views.dco_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>
 										</td>
                 </tr>
