--- a/psc/templates/psc/eday_incident_list.html
+++ b/psc/templates/psc/eday_incident_list.html
@@ -77,7 +77,7 @@
 			<th>R</th>
 			<th>S</th>
 			<th>T</th>
-                        <th class="checklist" colspan="2"><button onclick="location.href='{% url psc.views.eday_incident_add  %}'">Add Incident</button></th>
+                        {% if perms.psc.can_manage %}<th class="checklist" colspan="2"><button onclick="location.href='{% url psc.views.eday_incident_add  %}'">Add Incident</button></th>{% endif %}
                     </tr>
                 </thead>
 				{% for cl in checklists.object_list %}
@@ -174,7 +174,7 @@
 						{% endif %}
                     </td>
 
-                    <td class="checklist"><a href="{% url psc.views.eday_incident_update cl.id %}">Edit</a></td>
+                    {% if perms.psc.can_manage %}<td class="checklist"><a href="{% url psc.views.eday_incident_update cl.id %}">Edit</a></td>{% endif %}
 										<td><a href="{% url psc.views.eday_incident_delete cl.id %}" onClick="return confirm('Are you sure you want to delete this incident')">Del</a>
 										</td>
                 </tr>
