--- a/psc/templates/psc/contact_list.html
+++ b/psc/templates/psc/contact_list.html
@@ -47,8 +47,8 @@
 <div class="grid_16">
     <div class="box">
         <h2>Contacts List<span class="flag">
-            <button onclick="location.href='{% url psc.views.contact_list %}'">Refresh</button>
-            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url psc.views.export "contact" %}'">Export</button>{% endif %}	    
+            <button onclick="location.href='{% url contacts_list_view %}'">Refresh</button>
+            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url contacts_list_export %}'">Export</button>{% endif %}	    
 	{% if perms.psc.can_analyse %}<button id="sndmsg_btn">Send Message</button>{% endif %}
         </span></h2>
         <div class="block">
