--- a/psc/templates/psc/dco_checklist_list.html
+++ b/psc/templates/psc/dco_checklist_list.html
@@ -48,8 +48,8 @@
 <div class="grid_16">
     <div class="box">
         <h2>Display, Claims &amp; Objections Checklists <span class="flag">
-            <button onclick="location.href='{% url psc.views.dco_checklist_list %}'">Refresh</button>
-            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url psc.views.export "dcoc" %}'">Export</button>{% endif %}
+            <button onclick="location.href='{% url dco_checklist_view %}'">Refresh</button>
+            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url dco_checklist_export %}'">Export</button>{% endif %}
 	    {% if perms.psc.can_analyse %}<button id="sndmsg_btn">Send Message</button>{% endif %}
 	</span></h2>
         <div class="block">
