--- a/psc/templates/psc/eday_incident_list.html
+++ b/psc/templates/psc/eday_incident_list.html
@@ -22,8 +22,8 @@
     <div class="box">
         <h2>Election Day Critical Incidents
         <span class="flag">
-            <button onclick="location.href='{% url psc.views.eday_incident_list %}'">Refresh</button>
-            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url psc.views.export "dcoi" %}'">Export</button>{% endif %}
+            <button onclick="location.href='{% url eday_incident_view %}'">Refresh</button>
+            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url eday_incident_export %}'">Export</button>{% endif %}
         </span>
         </h2>
         <div class="block">
