--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -52,8 +52,8 @@
     <div class="box" style="padding-bottom:1em">
         <h2>Voter Registration Checklist
 					<span class="flag">
-            <button onclick="location.href='{% url psc.views.vr_checklist_list %}'">Refresh</button>
-            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url psc.views.export "vrc" %}'">Export</button>{% endif %}
+            <button onclick="location.href='{% url vr_checklist_view %}'">Refresh</button>
+            {% if perms.psc.can_analyse %}<button onclick="location.href='{% url vr_checklist_export %}'">Export</button>{% endif %}
 			{% if perms.psc.can_analyse %}<button id="sndmsg_btn">Send Message</button>{% endif %}
 					</span>
         </h2>
