--- a/psc/templates/psc/eday_checklist_list.html
+++ b/psc/templates/psc/eday_checklist_list.html
@@ -81,15 +81,28 @@
             <table>
                 <thead>
                     <tr>
+                        <th colspan="5">&nbsp;</th>
+                        <th colspan="5">SMS</th>
+                        <th colspan="5">Flag</th>
+                        {% if perms.psc.can_manage_data %}<th>&nbsp;</th>{% endif %}
+                    </tr>	
+                    <tr>
                         <th>PSC ID</th>
                         <th>Date</th>
                         <th>LGA</th>
                         <th>State/SD</th>
                         <th>Observer</th>
-                        <th>Supervisor</th>
-                        <th class="checklist">Arrival</th>
-                        <th class="checklist">Status</th>
-                        {% if psc.perms.can_manage_data %}<th>&nbsp;</th>{% endif %}
+                        <th class="checklist">1st</th>
+                        <th class="checklist">2nd</th>
+                        <th class="checklist">3rd</th>
+                        <th class="checklist">4th</th>
+                        <th class="checklist">5th</th>
+                        <th class="checklist">1st</th>
+                        <th class="checklist">2nd</th>
+                        <th class="checklist">3rd</th>
+                        <th class="checklist">4th</th>
+                        <th class="checklist">5th</th>
+                        {% if perms.psc.can_manage_data %}<th>&nbsp;</th>{% endif %}
                     </tr>
                 </thead>
                 <tbody>
@@ -97,23 +110,38 @@
                     <tr{% cycle ' class="odd"' '' %}>
                         <td>{{ cl.observer.observer_id }}</td>
                         <td>{{ cl.date|date:"D d-M" }}</td>
-                        <td>{{ cl.observer.location.name }}</td>
-                        <td>{{ cl.observer.location.parent.name|truncatewords:3 }}</td>
-			<td>{{ cl.observer.name|truncatewords:2 }}{% if cl.observer.phone %} (<strong>{{ cl.observer.phone }}</strong>){% endif %}</td>
-			<td>{{ cl.observer.supervisor.name|truncatewords:2 }}{% if cl.observer.supervisor.phone %} (<strong>{{ cl.observer.supervisor.phone }}</strong>){% endif %}</td>
+                        <td>{{ cl.observer.lga.name }}</td>
+                        <td>{{ cl.observer.district.name|truncatewords:3 }}</td>
+						<td>{{ cl.observer.name|truncatewords:2 }}{% if cl.observer.phone %} (<strong>{{ cl.observer.phone }}</strong>){% endif %}</td>
                         <td class="checklist">
-						{% if cl.submitted %}
-                            <img src="/assets/img/status.png" width="16" height="16" alt="arrived" />
-						{% else %}
-                            <img src="/assets/img/exclamation-red.png" width="16" height="16" alt="none" />
-						{% endif %}
-												</td>
-                        <td class="checklist">
-					{% if cl.AA and cl.BA and cl.BB and cl.BC and cl.BD and cl.BE and cl.BF and cl.BG and cl.BH and cl.BJ and cl.BK and cl.BM and cl.BN and cl.BP and cl.CA and cl.CB and cl.CC and cl.CD and cl.CE and cl.CF and cl.CG and cl.CH and cl.CJ and cl.CK and cl.CM and cl.CN and cl.CP and cl.CQ and cl.submitted %}
                             <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
-							{% else %}
-                            <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
-							{% endif %}
+						</td>
+                        <td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        </td>
+						<td class="checklist">
+                            <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
                         </td>
                         {% if perms.psc.can_manage_data %}<td><a href="{% url psc.views.eday_checklist cl.id %}">Edit</a></td>{% endif %}
                     </tr>
