--- a/psc/templates/psc/eday_checklist_form.html
+++ b/psc/templates/psc/eday_checklist_form.html
@@ -4,13 +4,13 @@
 <script src="/assets/js/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
     $(function(){
-        $('.control_text').attr('disabled', 'disabled');
+        $('.control_text').attr('readonly', 'readonly');
 
 		$('.control').click(function () {
-			if ($('input[name=control-'+ $(this).attr('value') +']').attr('disabled')) {
-				$('input[name=control-'+ $(this).attr('value') +']').removeAttr('disabled');
+			if ($('input[name=control-'+ $(this).attr('value') +']').attr('readonly')) {
+				$('input[name=control-'+ $(this).attr('value') +']').removeAttr('readonly');
 			} else {
-				$('input[name=control-'+ $(this).attr('value') +']').attr('disabled', 'disabled');
+				$('input[name=control-'+ $(this).attr('value') +']').attr('readonly', 'readonly');
 			}
 		});
     });
